--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
          <!--Шапка-->
    <header>
-    <nav>
+    <nav class="container">
        <a href="" class="logo-web">Web <span class="logo">Студия</span> </a>
        <ul class="site-nave list">
            <li><a href="" class="site-nave list link">Студия</a></li>
@@ -30,7 +30,7 @@
 <main>
 <!--Герой-->
 <div>
-    <section>
+    <section class="hero">
         <h1 class="title">Эффективные решения<br/> для вашего бизнеса</h1>
         <button class="title-button"> Заказать услугу</button>
     </section>
@@ -57,8 +57,10 @@
     </li>      
 </ul>
  </section>
+</div>
  <!--Деятельность-->
- <section>
+ <div class="container">
+ <section class="user">
     <h2>Чем мы занимаемся</h2>
 <ul class="list">
     <li><img src="./css/images/img.jpg" alt=""></li>
@@ -72,7 +74,9 @@
     </li>
 </ul>
  </section>
+</div>
  <!--Персонал-->
+ <div class="container">
  <section class="personal">
     <h2>Наша комана</h2>
     <ul>
@@ -119,7 +123,9 @@
                   <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
                </ul>
  </section>
+ </div>
  <!--Партнеры-->
+ <div class="container">
  <section class="customers">  
     <h2>Постоянные клиенты</h2>
     <ul>
@@ -131,13 +137,14 @@
         <li><a href="/"><img src="./css/images/Клиенты/logo6.png" alt="Логотип компании"></a></li>
     </ul>
  </section>
-</div>
+ </div>
 </main>
 <!--Футер-->
 <footer class="footer">
-    <div>
+    <div class="container">
+        <div>
         <section>
-          <a href="" class="logo-web">Web <span class="footer-logo">Студия</span> </a>
+          <a href="" class="logo-web">Web <span class="footer-logo">Studio</span> </a>
         <address class="footer-nav">
             <ul>
                 <li><a href="https://goo.gl/maps/KoF2JPGesM8iSNVPA" target="_blank" rel="noopener noreferrer" class="footer-nav">г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -145,7 +152,7 @@
                 <li><a href="tel:tel:+380961111111" class="footer-nav link">+38 096 111 11 11</a></li>
             </ul>
         </address>
-    </section>
+       </section>
     </div>
     <div>
     <section>
@@ -163,7 +170,8 @@
             <h2>Подпишитесь на рассылку</h2>
             <button class="footer-button">Подписаться</button>
         </section>
-      </div>
+    </div>
+</div>
     </footer>
           </body>
         </html>
