--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body>
     <!--Шапка-->
 <header>
-    <nav>
+    <nav class="container">
         <a href="" class="logo-web">Web <span class="logo">Студия</span> </a>
     <ul class="site-nave list">
         <li><a href="./index.html" class="site-nave list link">Студия</a></li>
@@ -79,8 +79,9 @@
 </main>
 <!--Футер-->
 <footer class="footer">
+    <div class="container">
       <div>
-        <a href="" class="logo-web">Web <span class="footer-logo">Студия</span> </a>
+        <a href="" class="logo-web">Web <span class="footer-logo">Studio</span> </a>
     <address class="footer-nav">
     <ul>
         <li><a href="https://goo.gl/maps/KoF2JPGesM8iSNVPA" target="_blank" rel="noopener noreferrer" class="footer-nav"> г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -101,6 +102,7 @@
 <div>
     <h2>Подпишитесь на рассылку</h2>
         <button class="footer-button">Подписаться</button>
+</div>
 </div>
 </footer>
 </body>
