--- a/portfolio.html
+++ b/portfolio.html
@@ -1,109 +1,126 @@
-<!DOCTYPE html><html lang="ru">
-<head>
-<meta charset="utf-8" />
-<meta name="vievport" content="width=devise-width, initial-scale=1/0"/>
-<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<title>Web Studio</title>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/normalize.css">
-<link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    <!--Шапка-->
-<header>
-    <nav class="container">
-        <a href="" class="logo-web">Web <span class="logo">Студия</span> </a>
-    <ul class="site-nave list">
-        <li><a href="./index.html" class="site-nave list link">Студия</a></li>
-        <li><a href="" class="site-nave list link">Портфолио</a></li>
-        <li><a href="" class="site-nave list">Контакты</a></li>
-    </ul>
-    <ul class="site-nave list">
-        <li><img src="/css/images/envelope.svg" alt="" class="site-nave list link">
-        <a href="mailto:info@devstudio.com" class="site-nave list link"> info@devstudio.com</a></li> 
-        <li><img src="/css/images/Vector.svg" alt="" class="site-nave list">
-        <a href="tel:+380961111111" class="site-nave list">+38 096 111 11 11</a></li>
-    </ul>
-    </nav>
-</header>
-<main>
-    <div class="container">
-        <section>     
-<!--<h1>Список работ</h1>-->
-<ul>
-    <li><button type="button" class="title-button">Все</button></li>
-    <li><button type="button" class="nav-button">Веб-сайты</button></li>
-    <li><button type="button" class="nav-button">Приложения</button></li>
-    <li><button type="button" class="nav-button">Дизайн</button></li>
-    <li><button type="button" class="nav-button">Маркетинг</button></li></ul>
-<ul>
-    <li><a href=""><img src="css/ФотоПортфолио/img.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Технокряк</h2></a></li>
-    <li><a href=""><p class="work-list">Веб-сайт</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-    <li><a href=""><img src="css/ФотоПортфолио/img1.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Постер New Orlean vs Golden Star</h2></a></li>
-    <li><a href=""><p class="work-list">Дизайн</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-    <li><a href=""><img src="css/ФотоПортфолио/img2.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Ресторан Seafood</h2></a></li>
-    <li><a href=""><p class="work-list">Приложение</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-    <li><a href=""><img src="css/ФотоПортфолио/img3.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Проект Prime</h2></a></li>
-    <li><a href=""><p class="work-list">Маркетинг</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-    <li><a href=""><img src="css/ФотоПортфолио/img4.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Проект Boxes</h2></a></li>
-    <li><a href=""><p class="work-list">Приложение</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-    <li><a href=""><img src="css/ФотоПортфолио/img5.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Inspiration has no Borders</h2></a></li>
-    <li><a href=""><p class="work-list">Веб-сайт</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-    <li><a href=""><img src="css/ФотоПортфолио/img6.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Издание Limited Edition</h2></a></li>
-    <li><a href=""><p class="work-list">Дизайн</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-    <li><a href=""><img src="css/ФотоПортфолио/img7.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Проект LAB</h2></a></li>
-    <li><a href=""><p class="work-list">Маркетинг</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-    <li><a href=""><img src="css/ФотоПортфолио/img8.jpg" alt=""></a></li>
-    <li><a href=""><h2 class="title-work">Growing Business</h2></a></li>
-    <li><a href=""><p class="work-list">Приложение</p></a></li>
-    <li><a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-</ul>
-        </section>
+ <!DOCTYPE html><html lang="ru">
+ <head>
+ <meta charset="utf-8" />
+ <meta name="vievport" content="width=devise-width, initial-scale=1/0"/>
+ <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+ <title>Web Studio</title>
+ <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="./css/normalize.css">
+ <link rel="stylesheet" href="./css/styles.css">
+ </head>
+ <body>
+<!--Шапка-->
+ <header>
+<nav class="container">
+        <a href="" class="logo-web">Web <span class="logo">Studio</span> </a>
+     <ul class="site-nave list">
+         <li><a href="./index.html" class="site-nave list link">Студия</a></li>
+         <li><a href="" class="site-nave list link">Портфолио</a></li>
+         <li><a href="" class="site-nave list">Контакты</a></li>
+     </ul>
+     <ul class="site-nave list">
+         <li><img src="/css/images/envelope.svg" alt="" class="site-nave list link">
+         <a href="mailto:info@devstudio.com" class="site-nave list link"> info@devstudio.com</a></li> 
+         <li><img src="/css/images/Vector.svg" alt="" class="site-nave list">
+         <a href="tel:+380961111111" class="site-nave list">+38 096 111 11 11</a></li>
+     </ul>
+</nav>
+ </header>
+ <main>
+     <div class="container">
+         <section>     
+ <!--<h1>Список работ</h1>-->
+ <ul>
+     <li><button type="button" class="title-button">Все</button></li>
+     <li><button type="button" class="nav-button">Веб-сайты</button></li>
+     <li><button type="button" class="nav-button">Приложения</button></li>
+     <li><button type="button" class="nav-button">Дизайн</button></li>
+     <li><button type="button" class="nav-button">Маркетинг</button></li></ul>
+ <ul>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Технокряк</h2></a>
+    <a href=""><p class="work-list">Веб-сайт</p></a>
+    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+</li>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img1.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Постер New Orlean vs Golden Star</h2></a>
+    <a href=""><p class="work-list">Дизайн</p></a>
+    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+</li>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img2.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Ресторан Seafood</h2></a>
+    <a href=""><p class="work-list">Приложение</p></a>
+    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img3.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Проект Prime</h2></a>
+    <a href=""><p class="work-list">Маркетинг</p></a>
+    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+</li>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img4.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Проект Boxes</h2></a>
+    <a href=""><p class="work-list">Приложение</p></a>
+    <<a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+</li>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img5.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Inspiration has no Borders</h2></a>
+    <a href=""><p class="work-list">Веб-сайт</p></a>
+    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+</li>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img6.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Издание Limited Edition</h2></a>
+    <a href=""><p class="work-list">Дизайн</p></a>
+    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+</li>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img7.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Проект LAB</h2></a>
+    <a href=""><p class="work-list">Маркетинг</p></a>
+    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+</li>
+<li>
+    <a href=""><img src="css/ФотоПортфолио/img8.jpg" alt=""></a>
+    <a href=""><h2 class="title-work">Growing Business</h2></a>
+    <a href=""><p class="work-list">Приложение</p></a>
+    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
+</li>
+ </ul>
+         </section>
+     </div>
+ </main>
+ <!--Футер-->
+ <footer class="footer">
+     <div class="container">
+    <div>
+         <a href="" class="logo-web">Web <span class="footer-logo">Studio</span> </a>
+        <address class="footer-nav">
+        <ul>
+            <li><a href="https://goo.gl/maps/KoF2JPGesM8iSNVPA" target="_blank" rel="noopener noreferrer" class="footer-nav"> г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com" class="footer-nav link"> info@devstudio.com</a></li>
+            <li><a href="tel:tel:+380961111111" class="footer-nav">+38 096 111 11 11</a></li>
+        </ul>
+        </address>
+          </div>
+    <div>
+           <h2 class="footer-title">Присоединяйтесь</h2>
+        <ul class="footer-nav">
+            <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
+            <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
+            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
+        </ul>
     </div>
-</main>
-<!--Футер-->
-<footer class="footer">
-    <div class="container">
-      <div>
-        <a href="" class="logo-web">Web <span class="footer-logo">Studio</span> </a>
-    <address class="footer-nav">
-    <ul>
-        <li><a href="https://goo.gl/maps/KoF2JPGesM8iSNVPA" target="_blank" rel="noopener noreferrer" class="footer-nav"> г. Киев, пр-т Леси Украинки, 26</a></li>
-        <li><a href="mailto:info@devstudio.com" class="footer-nav link"> info@devstudio.com</a></li>
-        <li><a href="tel:tel:+380961111111" class="footer-nav">+38 096 111 11 11</a></li>
-    </ul>
-    </address>
-      </div>
-<div>
-       <h2 class="footer-title">Присоединяйтесь</h2>
-    <ul class="footer-nav">
-        <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
-        <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
-        <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
-        <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
-    </ul>
-</div>
-<div>
-    <h2>Подпишитесь на рассылку</h2>
-        <button class="footer-button">Подписаться</button>
-</div>
-</div>
-</footer>
-</body>
-</html>
+    <div>
+        <h2>Подпишитесь на рассылку</h2>
+         <button class="footer-button">Подписаться</button>
+    </div>
+    </div>
+    </footer>
+    </body>
+    </html> 
