--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="vievport" content="width=devise-width, initial-scale=1/0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Web Studio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/styles.css">
-  </head>
-  <body>
-         <!--Шапка-->
-   <header>
-    <nav class="container">
-       <a href="" class="logo-web">Web <span class="logo">Студия</span> </a>
-       <ul class="site-nave list">
-           <li><a href="" class="site-nave list link">Студия</a></li>
-           <li><a href="./portfolio.html" class="site-nave list link">Портфолио</a></li>
-           <li><a href="" class="site-nave list">Контакты</a></li>
-        </ul>
-        <ul class="site-nave list">
-            <li><img src="/css/images/envelope.svg" alt="" class="site-nave list link">
-            <a href="mailto:info@devstudio.com" class="site-nave list link">info@devstudio.com</a></li> 
-            <li><img src="/css/images/Vector.svg" alt="" class="site-nave list">
-            <a href="tel:+380961111111" class="site-nave list">+38 096 111 11 11</a></li>
-        </ul>
-    </nav>
-</header>
-<main>
-<!--Герой-->
-<div>
-    <section class="hero">
-        <h1 class="title">Эффективные решения<br/> для вашего бизнеса</h1>
-        <button class="title-button"> Заказать услугу</button>
-    </section>
-</div>
-<div class="container">
+ <!DOCTYPE html>
+ <html lang="ru">
+   <head>
+     <meta charset="utf-8" />
+     <meta name="vievport" content="width=devise-width, initial-scale=1/0"/>
+     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+     <title>Web Studio</title>
+     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="./css/normalize.css">
+     <link rel="stylesheet" href="./css/styles.css">
+   </head>
+   <body>
+        <!--Шапка-->
+<header>
+    <nav class="container main-nav">
+        <a href="" class="logo-web">Web <span class="logo">Studio</span> </a>
+        <ul class="site-nav list">
+            <li class="item"><a href="" class="site-nav list link">Студия</a></li>
+            <li class="item"><a href="./portfolio.html" class="site-nav list link">Портфолио</a></li>
+            <li class="item"><a href="" class="site-nav list link">Контакты</a></li>
+         </ul>
+         <div class="auth">
+             <ul class="auth-nav list">
+                 <li>
+                    <a href="mailto:info@devstudio.com" class="site-nav list link">info@devstudio.com</a>
+                </li> 
+                 <li>
+                    <a href="tel:+380961111111" class="site-nave list link">+38 096 111 11 11</a>
+                </li>
+             </ul>
+        </div>
+     </nav>
+ </header>
+ <main>
+ <!--Герой-->
+ <div>
+     <section class="hero">
+         <h1 class="title">Эффективные решения<br/> для вашего бизнеса</h1>
+         <button class="title-button"> Заказать услугу</button>
+     </section>
+ </div>
+ <div class="container">
  <section>
 <!--Преимущества Веб Студии-->
 <ul class="edge">
@@ -57,121 +61,121 @@
     </li>      
 </ul>
  </section>
-</div>
- <!--Деятельность-->
- <div class="container">
- <section class="user">
-    <h2>Чем мы занимаемся</h2>
-<ul class="list">
-    <li><img src="./css/images/img.jpg" alt=""></li>
-        <li><a href="#" rel="noopener noreferrer" class="list-do">Десктопные приложения</a>
-    </li>
-    <li><img src="./css/images/box.jpg" alt=""></li>
-        <li><a href="#" rel="noopener noreferrer" class="list-do">Мобильные приложения</a>
-    </li>
-    <li><img src="./css/images/img3.jpg" alt=""></li>
-    <li><a href="#" rel="noopener noreferrer" class="list-do">Дизайнерские решения</a>
-    </li>
-</ul>
- </section>
-</div>
- <!--Персонал-->
- <div class="container">
- <section class="personal">
-    <h2>Наша комана</h2>
-    <ul>
-        <li><img src="./css/команда/img1.jpg" width="270" height="260" alt="Product Designer" />
-          <h3 class="people">Николай Кучеренко</h3>
-          <p lang="en" class="personal-title">Product Designer</p></li>
-    </ul>
-    <ul>
-         <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="personal-link"></a></li>
-         <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
-         <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
-        <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
-      </ul>
-      <ul>
-            <li><img src="./css/команда/img2.jpg" width="270" height="260" alt="Frontend Developer">
-              <h3 class="people">Ольга Иванова</h3>
-              <p lang="en" class="personal-title">Frontend Developer</p></li>
-            </ul>
-            <ul>
-                  <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
-                 <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
-                 <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
-                 <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
-                </ul>
-              <ul>
-                 <li><img src="./css/команда/img3.jpg" width="270" height="260" alt="Marketing">
-                  <h3 class="people">Андрей Шевченко</h3>
-                  <p lang="en" class="personal-title">Marketing</p></li>
-              </ul>
-                  <ul>
-                    <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
+ </div>
+  <!--Деятельность-->
+  <div class="container">
+    <section class="user">
+       <h2>Чем мы занимаемся</h2>
+   <ul class="list">
+       <li><img src="./css/images/img.jpg" alt=""></li>
+           <li><a href="#" rel="noopener noreferrer" class="list-do">Десктопные приложения</a>
+       </li>
+       <li><img src="./css/images/box.jpg" alt=""></li>
+           <li><a href="#" rel="noopener noreferrer" class="list-do">Мобильные приложения</a>
+       </li>
+       <li><img src="./css/images/img3.jpg" alt=""></li>
+       <li><a href="#" rel="noopener noreferrer" class="list-do">Дизайнерские решения</a>
+       </li>
+   </ul>
+    </section>
+   </div>
+    <!--Персонал-->
+    <div class="container">
+    <section class="personal">
+       <h2>Наша комана</h2>
+       <ul>
+           <li><img src="./css/команда/img1.jpg" width="270" height="260" alt="Product Designer" />
+             <h3 class="people">Николай Кучеренко</h3>
+             <p lang="en" class="personal-title">Product Designer</p></li>
+       </ul>
+       <ul>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм" class="personal-link"></a></li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
+            <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
+           <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
+         </ul>
+         <ul>
+               <li><img src="./css/команда/img2.jpg" width="270" height="260" alt="Frontend Developer">
+                 <h3 class="people">Ольга Иванова</h3>
+                 <p lang="en" class="personal-title">Frontend Developer</p></li>
+               </ul>
+               <ul>
+                     <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
                     <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
                     <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
                     <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
+                   </ul>
+                 <ul>
+                    <li><img src="./css/команда/img3.jpg" width="270" height="260" alt="Marketing">
+                     <h3 class="people">Андрей Шевченко</h3>
+                     <p lang="en" class="personal-title">Marketing</p></li>
+                 </ul>
+                     <ul>
+                       <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
+                       <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
+                       <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
+                       <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
+                     </ul>
+                 <ul>
+                        <li><img src="./css/команда/img4.jpg" width="270" height="260" alt="Ui designer">
+                            <h3 class="people">Иван Николаев</h3>
+                            <p lang="en" class="personal-title">Ui designer</p></li></ul>
+                 <ul>
+                     <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
+                     <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
+                     <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
+                     <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
                   </ul>
-              <ul>
-                     <li><img src="./css/команда/img4.jpg" width="270" height="260" alt="Ui designer">
-                         <h3 class="people">Иван Николаев</h3>
-                         <p lang="en" class="personal-title">Ui designer</p></li></ul>
-              <ul>
-                  <li><a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
-                  <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
-                  <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
-                  <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
-               </ul>
- </section>
- </div>
- <!--Партнеры-->
- <div class="container">
- <section class="customers">  
-    <h2>Постоянные клиенты</h2>
-    <ul>
-        <li><a href="/"><img src="./css/images/Клиенты/logo1.png" alt="Логотип компании"></a></li>
-        <li><a href="/"><img src="./css/images/Клиенты/logo2.png" alt="Логотип компании"></a></li>
-        <li><a href="/"><img src="./css/images/Клиенты/logo3.png" alt="Логотип компании"></a></li>
-        <li><a href="/"><img src="./css/images/Клиенты/logo4.png" alt="Логотип компании" class="customers-link"></a></li>
-        <li><a href="/"><img src="./css/images/Клиенты/logo5.png" alt="Логотип компании"></a></li>
-        <li><a href="/"><img src="./css/images/Клиенты/logo6.png" alt="Логотип компании"></a></li>
-    </ul>
- </section>
- </div>
-</main>
-<!--Футер-->
-<footer class="footer">
-    <div class="container">
-        <div>
-        <section>
-          <a href="" class="logo-web">Web <span class="footer-logo">Studio</span> </a>
-        <address class="footer-nav">
-            <ul>
-                <li><a href="https://goo.gl/maps/KoF2JPGesM8iSNVPA" target="_blank" rel="noopener noreferrer" class="footer-nav">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="footer-nav link">info@devstudio.com</a></li>
-                <li><a href="tel:tel:+380961111111" class="footer-nav link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
-       </section>
-    </div>
-    <div>
-    <section>
-        <h2 class="footer-title">Присоединяйтесь</h2>
-        <ul class="footer-nav">
-            <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
-            <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
-              <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
-              <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
-        </ul>
     </section>
     </div>
-    <div>
-        <section>
-            <h2>Подпишитесь на рассылку</h2>
-            <button class="footer-button">Подписаться</button>
-        </section>
-    </div>
+    <!--Партнеры-->
+    <div class="container">
+    <section class="customers">  
+       <h2>Постоянные клиенты</h2>
+       <ul>
+           <li><a href="/"><img src="./css/images/Клиенты/logo1.png" alt="Логотип компании"></a></li>
+           <li><a href="/"><img src="./css/images/Клиенты/logo2.png" alt="Логотип компании"></a></li>
+           <li><a href="/"><img src="./css/images/Клиенты/logo3.png" alt="Логотип компании"></a></li>
+           <li><a href="/"><img src="./css/images/Клиенты/logo4.png" alt="Логотип компании" class="customers-link"></a></li>
+           <li><a href="/"><img src="./css/images/Клиенты/logo5.png" alt="Логотип компании"></a></li>
+           <li><a href="/"><img src="./css/images/Клиенты/logo6.png" alt="Логотип компании"></a></li>
+       </ul>
+    </section>
 </div>
-    </footer>
-          </body>
-        </html>
+ </main>
+ <!--Футер-->
+ <footer class="footer">
+     <div class="container">
+         <div>
+         <section>
+            <a href="" class="logo-web">Web <span class="footer-logo">Studio</span> </a>
+            <address class="footer-nav">
+                <ul>
+                    <li><a href="https://goo.gl/maps/KoF2JPGesM8iSNVPA" target="_blank" rel="noopener noreferrer" class="footer-nav">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="footer-nav link">info@devstudio.com</a></li>
+                    <li><a href="tel:tel:+380961111111" class="footer-nav link">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </section>
+     </div>
+     <div>
+     <section>
+         <h2 class="footer-title">Присоединяйтесь</h2>
+       <ul class="footer-nav">
+               <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
+               <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
+               <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
+               <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
+         </ul>
+     </section>
+     </div>
+     <div>
+         <section>
+             <h2>Подпишитесь на рассылку</h2>
+             <button class="footer-button">Подписаться</button>
+         </section>
+     </div>
+ </div>
+     </footer>
+           </body>
+         </html>
