--- a/portfolio.html
+++ b/portfolio.html
@@ -1,126 +1,224 @@
- <!DOCTYPE html><html lang="ru">
- <head>
- <meta charset="utf-8" />
- <meta name="vievport" content="width=devise-width, initial-scale=1/0"/>
- <meta http-equiv="X-UA-Compatible" content="ie=edge" />
- <title>Web Studio</title>
- <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="./css/normalize.css">
- <link rel="stylesheet" href="./css/styles.css">
- </head>
- <body>
-<!--Шапка-->
- <header>
-<nav class="container">
-        <a href="" class="logo-web">Web <span class="logo">Studio</span> </a>
-     <ul class="site-nave list">
-         <li><a href="./index.html" class="site-nave list link">Студия</a></li>
-         <li><a href="" class="site-nave list link">Портфолио</a></li>
-         <li><a href="" class="site-nave list">Контакты</a></li>
-     </ul>
-     <ul class="site-nave list">
-         <li><img src="/css/images/envelope.svg" alt="" class="site-nave list link">
-         <a href="mailto:info@devstudio.com" class="site-nave list link"> info@devstudio.com</a></li> 
-         <li><img src="/css/images/Vector.svg" alt="" class="site-nave list">
-         <a href="tel:+380961111111" class="site-nave list">+38 096 111 11 11</a></li>
-     </ul>
-</nav>
- </header>
- <main>
-     <div class="container">
-         <section>     
- <!--<h1>Список работ</h1>-->
- <ul>
-     <li><button type="button" class="title-button">Все</button></li>
-     <li><button type="button" class="nav-button">Веб-сайты</button></li>
-     <li><button type="button" class="nav-button">Приложения</button></li>
-     <li><button type="button" class="nav-button">Дизайн</button></li>
-     <li><button type="button" class="nav-button">Маркетинг</button></li></ul>
- <ul>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Технокряк</h2></a>
-    <a href=""><p class="work-list">Веб-сайт</p></a>
-    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
-</li>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img1.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Постер New Orlean vs Golden Star</h2></a>
-    <a href=""><p class="work-list">Дизайн</p></a>
-    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
-</li>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img2.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Ресторан Seafood</h2></a>
-    <a href=""><p class="work-list">Приложение</p></a>
-    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a></li>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img3.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Проект Prime</h2></a>
-    <a href=""><p class="work-list">Маркетинг</p></a>
-    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
-</li>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img4.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Проект Boxes</h2></a>
-    <a href=""><p class="work-list">Приложение</p></a>
-    <<a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
-</li>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img5.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Inspiration has no Borders</h2></a>
-    <a href=""><p class="work-list">Веб-сайт</p></a>
-    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
-</li>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img6.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Издание Limited Edition</h2></a>
-    <a href=""><p class="work-list">Дизайн</p></a>
-    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
-</li>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img7.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Проект LAB</h2></a>
-    <a href=""><p class="work-list">Маркетинг</p></a>
-    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
-</li>
-<li>
-    <a href=""><img src="css/ФотоПортфолио/img8.jpg" alt=""></a>
-    <a href=""><h2 class="title-work">Growing Business</h2></a>
-    <a href=""><p class="work-list">Приложение</p></a>
-    <a href=""><p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></a>
-</li>
- </ul>
+<!DOCTYPE html><html lang="ru">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="vievport" content="width=devise-width, initial-scale=1/0"/>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Web Studio</title>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/normalize.css">
+        <link rel="stylesheet" href="./css/styles.css">
+    </head>
+    <body>
+        <!--Шапка-->
+        <header class="page-header">
+            <div class="container main-nav">
+                <a href="#" class="logo-header">
+                    <span class="logo web">Web</span>
+                    <span class="logo studio">Studio</span>
+                </a>
+                <nav>
+                    <ul class="site-nav list">
+                        <li class="item">
+                            <a href="./index.html" class="link current">Студия</a>
+                        </li>
+                        <li class="item">
+                            <a href="./portfolio.html" class="link">Портфолио</a>
+                        </li>
+                        <li class="item">
+                            <a href="#" class="link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                 <address class="site-nav">
+                            <a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+                            <a href="tel:+380961111111" class="contacts">+38 096 111 11 11</a>
+                 </address>
+            </div>
+            </header>
+            <main>
+
+         <section class="container">
+             <!--<h1>Список работ</h1>-->
+             <ul class="list portfolio">
+                 <li class="btn-portfolio">
+                     <button type="button" class="nav-button">Все</button>
+                    </li>
+                    <li class="btn"><button type="button" class="nav-button">Веб-сайты</button>
+                    </li>
+                    <li class="btn-portfolio">
+                        <button type="button" class="nav-button">Приложения</button>
+                    </li>
+                    <li class="btn-portfolio">
+                        <button type="button" class="nav-button">Дизайн</button>
+                    </li><li class="btn-portfolio">
+                        <button type="button" class="nav-button">Маркетинг</button>
+                    </li>
+                </ul>
          </section>
-     </div>
- </main>
- <!--Футер-->
- <footer class="footer">
-     <div class="container">
-    <div>
-         <a href="" class="logo-web">Web <span class="footer-logo">Studio</span> </a>
-        <address class="footer-nav">
-        <ul>
-            <li><a href="https://goo.gl/maps/KoF2JPGesM8iSNVPA" target="_blank" rel="noopener noreferrer" class="footer-nav"> г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li><a href="mailto:info@devstudio.com" class="footer-nav link"> info@devstudio.com</a></li>
-            <li><a href="tel:tel:+380961111111" class="footer-nav">+38 096 111 11 11</a></li>
-        </ul>
-        </address>
-          </div>
-    <div>
-           <h2 class="footer-title">Присоединяйтесь</h2>
-        <ul class="footer-nav">
-            <li> <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Инстаграм"></a></li>
-            <li><a href="https://twitter.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Твиттер"></a></li>
-            <li><a href="https://facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Фейсбук"></a></li>
-            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer" aria-label="ссылка Линкедин"></a></li>
-        </ul>
-    </div>
-    <div>
-        <h2>Подпишитесь на рассылку</h2>
-         <button class="footer-button">Подписаться</button>
-    </div>
-    </div>
+         <section class="conteiner">
+             <ul class="list flex-container">
+                 <li class="flex-element">
+                     <a href=""><img src="css/ФотоПортфолио/img.jpg"  alt="проект1"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Технокряк</h2>
+                            <p class="work-list">Веб-сайт</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="flex-element">
+                    <a href=""><img src="css/ФотоПортфолио/img1.jpg" alt="проект2"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Постер New Orlean vs Golden Star</h2>
+                            <p class="work-list">Дизайн</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="flex-element">
+                    <a href=""><img src="css/ФотоПортфолио/img2.jpg" alt="проект3"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Ресторан Seafood</h2>
+                            <p class="work-list">Приложение</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="flex-element">
+                    <a href=""><img src="css/ФотоПортфолио/img3.jpg" alt="проект4"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Проект Prime</h2>
+                            <p class="work-list">Маркетинг</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="flex-element">
+                    <a href=""><img src="css/ФотоПортфолио/img4.jpg" alt="проект5"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Проект Boxes</h2>
+                            <p class="work-list">Приложение</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="flex-element">
+                    <a href=""><img src="css/ФотоПортфолио/img5.jpg" alt="проект6"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Inspiration has no Borders</h2>
+                            <p class="work-list">Веб-сайт</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="flex-element">
+                    <a href=""><img src="css/ФотоПортфолио/img6.jpg" alt="проект7"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Издание Limited Edition</h2>
+                            <p class="work-list">Дизайн</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="flex-element">
+                    <a href=""><img src="css/ФотоПортфолио/img7.jpg" alt="проект8"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Проект LAB</h2>
+                            <p class="work-list">Маркетинг</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+                <li class="flex-element">
+                    <a href=""><img src="css/ФотоПортфолио/img8.jpg" alt="проект9"
+                        width="370"
+                        height="294"
+                        class="project-links />
+                        <div class="portfolio-content">
+                            <h2 class="title-work">Growing Business</h2>
+                            <p class="work-list">Приложение</p>
+                            <p class="text-work">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </main>
+        
+        <!--Футер-->
+    <footer class="footer">
+        <div class="container">
+         <div class="address-footer">
+            <a href="#" class="logo-footer">
+                <span class="logo web">Web</span>
+                <span class="logo white">Studio</span>
+            </a>
+            <br />
+
+            <address>
+                <ul class="list footer-nav ">
+                    <li class="item-footer">
+                        <a href="https://goo.gl/maps/KoF2JPGesM8iSNVPA" class="footer-contacts">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <br />
+                    <li class="item-footer">
+                        <a href="mailto:info@devstudio.com" class="footer-contacts">info@devstudio.com</a>
+                    </li>
+                    <br />
+                    <li class="item-footer">
+                        <a href="tel:tel:+380961111111" class="footer-contacts">+38 096 111 11 11</a>
+                    </li>
+                    <br />
+                </ul>
+            </address>
+        </div>
+        <div class="join">
+            <h2 class="footer-title">Присоединяйтесь</h2>
+            <ul class="flex-element list">
+                <li class="item-link">
+                    <a href="https://www.instagram.com/" aria-label="ссылка Инстаграм"><img src="/css/images/instagram.svg" /></a>
+                </li>
+                <li class="item-link">
+                    <a href="https://twitter.com/" aria-label="ссылка Твиттер"><img src="/css/images/twitter.svg" /></a>
+                </li>
+                <li class="item-link">
+                    <a href="https://facebook.com/" aria-label="ссылка Фейсбук"><img src="/css/images/facebook.svg" /></a>
+                </li>
+                <li class="item-link">
+                    <a href="https://www.linkedin.com/" aria-label="ссылка Линкедин"><img src="/css/images/linkedin.svg" /></a>
+                </li>
+            </ul>
+        </div>
+        
+        <div class="data">
+             <h2 class="footer-title">Подпишитесь на рассылку</h2>
+             <a href="#" class="footer button">Подписаться</a>
+        </div>
+        </div>
     </footer>
     </body>
-    </html> 
+    </html>
