--- a/index.html
+++ b/index.html
@@ -109,16 +109,14 @@
         
         <!--Персонал-->
         <section class="section team">
-            <div class="container">
+            <div class="flex-container">
                 <h2 class="section-title">Наша комана</h2>
-                <ul class="edge list">
+                <ul class="edge list flex-element">
                     <li class="item">
                         <img src="./css/команда/img1.jpg" alt="Product Designer" width="270" />
                         <h3 class="team-name">Николай Кучеренко</h3>
                         <p lang="en" class="team-title">Product Designer</p>
                     </li>
-                </ul>
-                <ul class="flex-element list">
                     <li class="item-link">
                         <a href="https://www.instagram.com/" aria-label="ссылка Инстаграм"><img src="./css/images/instagram.svg" alt="ссылка на Инстаграм" /></a>
                     </li>
@@ -131,16 +129,12 @@
                     <li class="item-link">
                         <a href="https://www.linkedin.com/" aria-label="ссылка Линкедин"><img src="./css/images/linkedin.svg" alt="ссылка на Линкедин" /></a>
                     </li>
-                </ul>
-                <ul class="flex-element list">
                     <li class="item">
                         <img src="./css/команда/img2.jpg" alt="Frontend Developer" width="270" />
                         <h3 class="team-name">Ольга Иванова</h3>
                         <p lang="en" class="team-title">Frontend Developer</p>
                     </li>
-                </ul>
-                <ul class="flex-element list">
-                    <li class="item-link">
+                 <li class="item-link">
                     <a href="https://www.instagram.com/" aria-label="ссылка Инстаграм"><img src="./css/images/instagram.svg" alt="ссылка на Инстаграм" /></a>
                 </li>
                 <li class="item-link">
@@ -152,14 +146,10 @@
                 <li class="item-link">
                     <a href="https://www.linkedin.com/" aria-label="ссылка Линкедин"><img src="./css/images/linkedin.svg" alt="ссылка на Линкедин" /></a>
                 </li>
-            </ul>
-            <ul class="flex-element list">
                 <li class="item">
                     <img src="./css/команда/img3.jpg" alt="Marketing" width="270" />
                     <h3 class="team-name">Андрей Шевченко</h3>
                     <p lang="en" class="team-title">Marketing</p></li>
-                </ul>
-                 <ul class="flex-element list">
                     <li class="item-link">
                         <a href="https://www.instagram.com/" aria-label="ссылка Инстаграм"><img src="./css/images/instagram.svg" alt="ссылка на Инстаграм" /></a>
                     </li>
@@ -172,15 +162,11 @@
                     <li class="item-link">
                         <a href="https://www.linkedin.com/" aria-label="ссылка Линкедин"><img src="./css/images/linkedin.svg" alt="ссылка на Линкедин" /></a>
                     </li>
-                </ul>
-                <ul class="flex-element list">
                     <li class="item">
                         <img src="./css/команда/img4.jpg" alt="Ui designer" width="270" />
                         <h3 class="team-name">Иван Николаев</h3>
                         <p lang="en" class="team-title">Ui designer</p>
                     </li>
-                </ul>
-                <ul class="flex-element list">
                     <li class="item-link">
                         <a href="https://www.instagram.com/" aria-label="ссылка Инстаграм"><img src="./css/images/instagram.svg" alt="ссылка на Инстаграм" /></a>
                     </li>
